resources/app-sre/uhc-production/authorizations.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: authorizations
  namespace: uhc-production
spec:
  host: api.openshift.com
  path: "/api/authorizations"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: uhc-acct-mngr
    weight: 100
