resources/app-sre/uhc-production/clusters-mgmt.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: clusters-mgmt
  namespace: uhc-production
spec:
  host: api.openshift.com
  path: "/api/clusters_mgmt"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: clusters-service
    weight: 100
