resources/app-sre/uhc-production/gateway-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway-server
  namespace: uhc-production
spec:
  host: api.openshift.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: gateway-server
    weight: 100
