resources/app-sre/uhc-production/service-logs.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 5m
  name: service-logs
spec:
  host: api.openshift.com
  path: "/api/service_logs"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: service-logs
    weight: 100
